# FP_autoware_Galactic

./: README.md
sensor_driver/driver/: launch.txt
sensor_driver/driver/can_communication/: package.xml  setup.py
sensor_driver/driver/can_communication/can_communication.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sensor_driver/driver/can_communication/can_communication/scripts/: can_output.py  pub_twist.py
sensor_driver/driver/can_communication/launch/: can_communication_launch.py
sensor_driver/driver/can_communication/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sensor_driver/driver/lidar_adaption/: CMakeLists.txt  package.xml
sensor_driver/driver/lidar_adaption/launch/: lidar_adaption_launch.py
sensor_driver/driver/lidar_adaption/src/: lidar_adaption.cpp
sensor_driver/driver/lidar_adaption/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
sensor_driver/driver/my_car_bringup/: CMakeLists.txt  package.xml
sensor_driver/driver/my_car_bringup/launch/: autoware.launch.xml
sensor_driver/driver/odm_to_llh/: package.xml  setup.cfg  setup.py
sensor_driver/driver/odm_to_llh/launch/: sensor_ws.launch.py
sensor_driver/driver/odm_to_llh/odm_to_llh/: odm_to_llh.py
sensor_driver/driver/rs_to_velodyne/: CMakeLists.txt  package.xml
sensor_driver/driver/rs_to_velodyne/launch/: start.py
sensor_driver/driver/rs_to_velodyne/src/: rs_to_velodyne.cpp
sensor_driver/driver/rslidar_sdk/: CMakeLists.txt
sensor_driver/driver/rslidar_sdk/config/: config.yaml
sensor_driver/driver/rslidar_sdk/launch/: start.py
sensor_driver/driver/scout_ros2/: README.md
sensor_driver/driver/ugv_sdk/: README.md
sensor_driver/driver/ugv_sdk/scripts/: bringup_can2usb_1m.bash  bringup_can2usb_500k.bash  setup_can2usb.bash
sensor_driver/driver/ugv_sdk/test/: scout_memory_check.cpp
sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_launch/data/: traffic_light_camera.yaml
sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_launch/launch/: camera.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
vehicle/sample_vehicle_launch/sample_vehicle_description/config/: mirror.param.yaml  vehicle_info.param.yaml
vehicle/sample_vehicle_launch/sample_vehicle_description/urdf/: vehicle.xacro
vehicle/sample_vehicle_launch/sample_vehicle_launch/launch/: vehicle_interface.launch.xml
(+33 files in other folders)
